# finsage-latam

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
data/seed/: credit_cards.json  personal_loans.json
docs/: decisions.md  deploy_railway.md  prompts.md  runbook_demo.md
evals/: __init__.py  retrieval_eval.py  run_evals.py  test_cases.jsonl
evals/prompts/: rubric_judge.md
src/: __init__.py  catalog.py  deploy.py  runtime.py
src/agents/: __init__.py  base.py  credit_card_expert.py  loan_expert.py  orchestrator.py  product_expert.py  profile_analyst.py
src/agents/prompts/: __init__.py  credit_card_expert.md  loan_expert.md  profile_analyst.md
src/api/: __init__.py  main.py
src/llm/: gemini.py
src/models/: __init__.py  schemas.py
src/rag/: __init__.py  retrieval.py  retriever.py
src/scrapers/: __init__.py  banco_chile.py  base.py
src/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/api/: test_api_main.py
tests/fixtures/: banco_chile_tarjetas.html
tests/integration/: __init__.py
tests/unit/: __init__.py  test_banco_chile_scraper.py  test_base_agent.py  test_base_scraper.py  test_catalog.py  test_deploy.py  test_orchestrator.py  test_product_experts.py  test_profile_analyst.py  test_retriever.py
